<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/pbInsertarCita"
        android:theme="@style/AppTheme.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivInsertarCita"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/app_name"
                android:scaleType="center" />

            <TextView
                android:id="@+id/tvInsertarCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dip"
                android:background="#AA000000"
                android:padding="12dip"
                android:textColor="#ffffffff" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFechaDlg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="29"
                android:gravity="center_vertical"
                android:text="@string/tv_FechaDlg" />

            <EditText
                android:id="@+id/etFechaDlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text="@string/et_FechaDlg" />

            <Button
                android:id="@+id/btSeleccionarFechaDlg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/bt_Dlg"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHoraDlg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="29"
                android:gravity="center_vertical"
                android:text="@string/tv_HoraDlg"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/etHoraDlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text="@string/et_HoraDlg" />

            <Button
                android:id="@+id/btSeleccionarHoraDlg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:text="@string/bt_Dlg"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvServicioDlg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="30"
                android:gravity="start"
                android:text="@string/tv_ServicioDlg"
                android:textAlignment="viewStart" />

            <Spinner
                android:id="@+id/spServiciosDlg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="10"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>