<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragmentos.InicioFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srInicio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/tv_Bienvenido"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNombreCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvBienvenido"
                app:layout_constraintStart_toEndOf="@+id/tvBienvenido" />

            <TextView
                android:id="@+id/tvDniCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:textColor="@color/material_on_background_emphasis_high_type"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBienvenido" />

            <TextView
                android:id="@+id/tvProximasCitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/tv_ProximasCitas"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDniCliente" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProximasCitas"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rv_citas_border"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProximasCitas" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <TextView
                android:id="@+id/tvGastosTotales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_GastosTotales"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/tvGastosTotalesCant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/material_on_background_emphasis_high_type"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGastosTotales"
                app:layout_constraintStart_toEndOf="@+id/tvGastosTotales" />

            <ProgressBar
                android:id="@+id/pbInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.ProgressBar"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInicioSinResultados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_SinResultados"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/rvProximasCitas"
                app:layout_constraintEnd_toEndOf="@+id/rvProximasCitas"
                app:layout_constraintStart_toStartOf="@+id/rvProximasCitas"
                app:layout_constraintTop_toTopOf="@+id/rvProximasCitas" />

            <TextView
                android:id="@+id/tvInicioErrorEstableciendoConexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_ErrorEstableciendoConexion"
                android:textAlignment="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/rvProximasCitas"
                app:layout_constraintEnd_toEndOf="@+id/rvProximasCitas"
                app:layout_constraintStart_toStartOf="@+id/rvProximasCitas"
                app:layout_constraintTop_toTopOf="@+id/rvProximasCitas" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>